--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "moment": "^2.27.0",
     "mongoose": "^5.11.9",
     "multer": "^1.4.2",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "socket.io": "^2.3.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
